--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,9 @@ jobs:
       - name: Azure Login via OIDC
         uses: azure/login@v1
         with:
-          client-id: 3351acd5-3910-4697-884c-759b1836aa8d # Seu Client ID do SP
-          tenant-id: c8243f68-d848-4840-a4f8-cdb4bd79b1cf # Seu Tenant ID
-          subscription-id: 5d1efecb-c00e-4754-9a01-2845c83d1e4b # Seu Subscription ID
+          client-id: 3351acd5-3910-4697-884c-759b1836aa8d
+          tenant-id: c8243f68-d848-4840-a4f8-cdb4bd79b1cf  # Removido o '/common'
+          subscription-id: 5d1efecb-c00e-4754-9a01-2845c83d1e4b
           
       # --- DEFINIÇÃO DO ENDPOINT E KEY VAULT URI (Variáveis de ambiente) ---
       # O script Python vai ler estas variáveis
