Refactor Azure login process in workflow
Removed force subscription selection step and updated Azure login parameters.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,22 +30,14 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Force Subscription Selection
-        run: |
-          # 1. Limpa o cache do Azure CLI
-          az account clear
-          # 2. Força a seleção da Assinatura e do Tenant.
-          # O Service Principal JÁ TEM a permissão Reader no nível da Assinatura
-          az login --service-principal -u 3351acd5-3910-4697-884c-759b1836aa8d -t ${{ secrets.AZURE_TENANT_ID }}
-          az account set --subscription 5d1efecb-c00e-4754-9a01-2845c83d1e4b
-        
       # --- AUTENTICAÇÃO SEGURA COM OIDC ---
       - name: Azure Login via OIDC
         uses: azure/login@v1
         with:
-          client-id: 3351acd5-3910-4697-884c-759b1836aa8d # Seu Client ID do SP
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: 5d1efecb-c00e-4754-9a01-2845c83d1e4b # Seu Subscription ID
+          client-id: 3351acd5-3910-4697-884c-759b1836aa8d
+          # MUDANÇA CRUCIAL: Trocamos o Secret pela string literal do Tenant ID:
+          tenant-id: c8243f68-d848-4840-a4f8-cdb4bd79b1cf 
+          subscription-id: 5d1efecb-c00e-4754-9a01-2845c83d1e4b
           
       # --- DEFINIÇÃO DO ENDPOINT E KEY VAULT URI (Variáveis de ambiente) ---
       # O script Python vai ler estas variáveis
