--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,7 +81,7 @@ jobs:
         run: |
           # Usa o parâmetro de entrada para executar o script
           MODEL_ID=${{ github.event.inputs.model_to_run }}
-          python src/analyze_doc_ai.py --model-id $MODEL_ID
+          python src/analyze_doc_ai.py --model-id "$MODEL_ID"
 
       - name: Upload Artifacts (Output JSON/TXT)
         uses: actions/upload-artifact@v4
